Fix toast message display on mobile to fit screen size

--- a/app/global.css
+++ b/app/global.css
@@ -201,3 +201,17 @@ button {
 .spin {
   animation: spin 1s linear infinite;
 }
+@media screen and (max-width: 520px) {
+  .Toastify__toast-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
+    width: 100% !important;
+  }
+  
+  .Toastify__toast {
+    width: 100% !important;
+    font-family: "Inter", sans-serif;
+  }
+}
